[project]
name = "dashwidgets"
version = "0.1.0"
description = "DashWidgets is a flexible and feature-rich desktop widget manager designed to help users efficiently manage and display various useful information. "
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "maliang[opt]>=3.1.5",
    "pillow>=12.0.0",
]
