[project]
name = "dashwidgets"
version = "0.1.0"
description = "DashWidgets is a flexible and feature-rich desktop widget manager designed to help users efficiently manage and display various useful information. "
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "customtkinter>=5.2.0",
    "pillow>=12.0.0",
    "pystray>=0.19.5",
]
